# quicklm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
demo/: index.html  package-lock.json  package.json
demo/src/: App.css  App.tsx  index.css
docs/: DEVLOG_1.md  DEVLOG_2.md  DEVLOG_3.md  DEVLOG_4.md
others/: QI_roadmap.md  paged_kv_design.md  sieve_design.md  sieve_implementation_plan.md  speculative_decoding_design.md
src/: main.cpp
src/arch/: architecture.hpp  generic_transformer.cpp  generic_transformer.hpp  qwen3_5.cpp  qwen3_5.hpp  registry.cpp  registry.hpp
src/io/: chat_template.cpp  chat_template.hpp  json_parser.hpp  safetensors.cpp  safetensors.hpp  tokenizer.cpp  tokenizer.hpp
src/model/: attention.cpp  attention.hpp  config.hpp  model.cpp  model.hpp  modules.hpp  scout.cpp  scout.hpp  sieve_convert.cpp  sieve_convert.hpp  speculative.cpp  speculative.hpp  weights.cpp  weights.hpp
src/ops/: math_ops.cpp  math_ops.hpp
src/tensor/: tensor.hpp
